crates/reinhardt-pages/tests/ui/style/fail/unknown_property.rs
use reinhardt_pages::{style_def};

#[style_def]
static STYLES: CardStyles = style! { .card { colour: red; } };
fn main() {}
